--- a/homework/src/main/res/layout/im_list_item.xml
+++ b/homework/src/main/res/layout/im_list_item.xml
@@ -35,7 +35,7 @@
 
     <!-- toRightOf 在X的右边-->
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/iv_avatar_header"
@@ -47,8 +47,8 @@
         android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title"
-        android:layout_alignLeft="@id/tv_title"
+        android:layout_below="@id/tv_id"
+        android:layout_alignLeft="@id/tv_id"
         android:layout_marginTop="4dp"
         android:singleLine="true"
         android:textColor="#F0E9E9"
